[package]
name = "cw-multi-test"
version = "0.19.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Testing tools for multi-contract interactions"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-multi-test"
homepage = "https://cosmwasm.com"

[features]
default = []
backtrace = ["anyhow/backtrace"]
cosmwasm_1_1 = ["cosmwasm-std/cosmwasm_1_1"]
cosmwasm_1_2 = ["cosmwasm_1_1", "cosmwasm-std/cosmwasm_1_2"]
cosmwasm_1_3 = ["cosmwasm_1_2", "cosmwasm-std/cosmwasm_1_3"]
cosmwasm_1_4 = ["cosmwasm_1_3", "cosmwasm-std/cosmwasm_1_4"]

[dependencies]
anyhow = "1.0.75"
bech32 = "0.9.1"
cosmwasm-std = { version = "1.5.0", features = [
    "iterator",
    "staking",
    "stargate",
] }
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
derivative = "2.2.0"
itertools = "0.12.0"
prost = "0.12.3"
schemars = "0.8.16"
serde = "1.0.193"
sha2 = "0.10.8"
thiserror = "1.0.50"

# We don't use the following dependencies directly. They're dependencies of our dependencies.
# We specify them to tighten their version requirements so that builds with `-Zminimal-versions` work.
# Once we bump `cosmwasm-*` deps to a version after `1.1.5`, we can remove these.
k256 = { version = "0.11.1", features = ["ecdsa"] }
cw-orch-daemon = { version = "0.16.0" }
cw-orch-networks = { version = "0.16.0" }
tokio = "1.28.2"
ibc-chain-registry = "0.25.0"
cosmwasm-vm = { version = "1.2", features = [
    "staking",
    "stargate",
    "iterator",
] }
bincode = "1.3.3"
base64 = "0.21.2"
cw20 = "1.0.1"
ibc-relayer-types = "0.25.1"
cosmrs = "0.14.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
cosmwasm-crypto = "1.2.7"
tonic = "0.9.2"
generic_static = "0.2.0"
once_cell = "1.18.0"
lazy_static = "1.4.0"
log = "0.4.19"
env_logger = "0.10.0"
cosmwasm-schema = "1.2.7"
treediff = { version = "4.0.2", features = ["with-rustc-serialize"] }
rustc-serialize = "0.3.24"
serde_json = "1.0.105"

[dev-dependencies]
# We don't use the following dependency directly,
# we tighten the version so that builds with `-Zminimal-versions` work.
serde_json = "1.0.105"

dotenv = "0.15.0"
cw-asset = "3.0.0"
hex = "0.4.3"
hex-literal = "0.4.1"
once_cell = "1.18.0"

moneymarket = { git = "https://github.com/CavernPerson/money-market-contracts" }
